Some refactoring of network and graph api. Begin implementation of web socket network access. More tests.

--- a/doc/ElixirFBP.Component.html
+++ b/doc/ElixirFBP.Component.html
@@ -56,7 +56,7 @@ Return an updated target with the new next process number</p>
   
 </tr>
 <tr>
-  <td class="summary_signature"><a href="#start/3">start(graph_reg_name, node_id, label)</a></td>
+  <td class="summary_signature"><a href="#start/4">start(graph_reg_name, node_id, label, fbp_graph)</a></td>
   
     <td class="summary_synopsis"><p>This function can figure out a node’s inports and outports by accessing the respective
 function in the component module definition, e.g. Math.Add.inports. The argument label
@@ -108,11 +108,11 @@ Return an updated target with the new next process number.</p>
   
 </section>
 <section class="detail">
-  <div class="detail_header" id="start/3">
-    <span class="signature"><strong>start(graph_reg_name, node_id, label)</strong></span>
+  <div class="detail_header" id="start/4">
+    <span class="signature"><strong>start(graph_reg_name, node_id, label, fbp_graph)</strong></span>
     <div class="detail_header_links">
       <span class="detail_type">(function)</span>
-      <a href="#start/3" class="detail_link" title="Link to this function">#</a>
+      <a href="#start/4" class="detail_link" title="Link to this function">#</a>
       <a class="to_top_link" href="#content" title="To the top of the page">&uarr;</a>
     </div>
   </div>
