--- a/doc/ElixirFBP.Component.html
+++ b/doc/ElixirFBP.Component.html
@@ -1,81 +1,151 @@
-<!DOCTYPE html>
+    <!DOCTYPE html>
 <html>
   <head>
-    <title>ElixirFBP.Component</title>
-    <meta charset="utf-8" />
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/elixir.css">
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>ElixirFBP.Component – ElixirFBP v0.0.1</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="generator" content="ExDoc v0.10.1-dev">
+    <link rel="stylesheet" href="dist/app.css" />
+    <script src="dist/sidebar_items.js"></script>
   </head>
-  <body>
-    <section id="content">
-      <div class="breadcrumbs">ElixirFBP v0.0.1 &rarr; <a href="overview.html">Overview</a> &rarr; <a href="ElixirFBP.html">ElixirFBP</a> &rarr; <a href="ElixirFBP.Component.html">Component</a></div>
+  <body data-type="modules">
+
+    <div class="main">
+<button class="sidebar-toggle">
+  <i class="icon-menu"></i>
+</button>
+<section class="sidebar">
+  <button class="sidebar-toggle">
+    <i class="icon-menu"></i>
+  </button>
+
+  
+  <a href="extra-api-reference.html" class="sidebar-projectLink">
+    <div class="sidebar-projectDetails">
+      <h1 class="sidebar-projectName">
+        ElixirFBP
+      </h1>
+      <h2 class="sidebar-projectVersion">
+        v0.0.1
+      </h2>
+    </div>
+    
+  </a>
+
+  <div class="sidebar-search">
+    <i class="icon-search"></i>
+    <input type="text" class="sidebar-searchInput" placeholder="search" autocomplete="off" />
+  </div>
+
+  <ul class="sidebar-listNav">
+    <li><a id="extras-list" href="#full-list">Pages</a></li>
+
+    
+      <li><a id="modules-list" href="#full-list">Modules</a></li>
+    
+
+    
+
+    
+  </ul>
+
+  <ul id="full-list" class="sidebar-fullList"></ul>
+  <div class="sidebar-noResults"></div>
+</section>
+
+<section class="content">
+  <div id="content" class="content-inner">
+
+
       <h1>
         ElixirFBP.Component
         
+        
+          <a href="https://github.com/pcmarks/ElixirFBP/blob/master/lib/elixirFBP/component.ex#L1" title="View Source" class="view-source" rel="help">
+            <i class="icon-code"></i>
+          </a>
+        
       </h1>
-
-      <ul class="summary_links">
-        
-          <li><a href="#summary">Summary</a></li>
-        
-        
-        
-          <li><a href="#functions_details">Functions</a></li>
-        
-        
-        
-      </ul>
 
       
         <section id="moduledoc" class="docstring">
           <p>Component is used to start an FBP component. It takes the component’s name -
 an Elixir module name - and spawns a process. It is assumed that the component
-module supports a loop function which will be called when the component is
+module supports a loop function which will be called once the component is
 spawned.</p>
 
         </section>
       
 
       
-        <a href="https://github.com/pcmarks/ElixirFBP/blob/master/lib/elixirFBP/component.ex#L1" class="view_source">Source</a>
-      
+        <section id="summary" class="details-list">
+          <h1 class="section-heading">
+            <a class="hover-link" href="#summary">
+              <i class="icon-link"></i>
+            </a>
+            Summary
+          </h1>
+          
 
-      
-        <h2 id="summary">Summary<span class="detail_header_links"><a class="to_top_link" href="#content" title="To the top of the page">&uarr;</a></span></h2>
-        <table class="summary">
-          <tr>
-  <td class="summary_signature"><a href="#start/5">start(component, node_id, inports, outports, no_of_processes \\ 1)</a></td>
+          
+  <div class="summary-functions summary">
+    <h2>
+      <a href="#functions">Functions</a>
+    </h2>
+    <div class="summary-row">
+  <div class="summary-signature">
+    <a href="#start/5">start(component, node_id, inports, outports, no_of_processes \\ 1)</a>
+  </div>
   
-    <td class="summary_synopsis"><p>Start the execution of a component in its own process(es). Spawn as many
+    <div class="summary-synopsis"><p>Start the execution of a component in its own process(es). Spawn as many
 processes as are specified in the no_of_processes value (the default value is one)</p>
-</td>
+</div>
   
-</tr>
-<tr>
-  <td class="summary_signature"><a href="#stop/3">stop(graph_reg_name, node_id, label)</a></td>
+</div>
+<div class="summary-row">
+  <div class="summary-signature">
+    <a href="#stop/3">stop(graph_reg_name, node_id, label)</a>
+  </div>
   
-    <td class="summary_synopsis"><p>Stop a component. This means find the pid of all of the component’s processes,
+    <div class="summary-synopsis"><p>Stop a component. This means find the pid of all of the component’s processes,
 unregister it and force an exit</p>
-</td>
+</div>
   
-</tr>
+</div>
 
-        </table>
+  </div>
+
+
+          
+
+          
+
+        </section>
       
 
       
 
       
-        <section id="functions_details" class="details_list">
-          <h2>Functions</h2>
-          <section class="detail">
-  <div class="detail_header" id="start/5">
-    <span class="signature"><strong>start(component, node_id, inports, outports, no_of_processes \\ 1)</strong></span>
-    <div class="detail_header_links">
-      <span class="detail_type">(function)</span>
-      <a href="#start/5" class="detail_link" title="Link to this function">#</a>
-      <a class="to_top_link" href="#content" title="To the top of the page">&uarr;</a>
-    </div>
+        <section id="functions" class="details-list">
+          <h1 class="section-heading">
+            <a class="hover-link" href="#functions">
+              <i class="icon-link"></i>
+            </a>
+            Functions
+          </h1>
+          <div class="detail" id="start/5">
+  <div class="detail-header">
+    <a href="#start/5" class="detail-link" title="Link to this function">
+      <i class="icon-link"></i>
+    </a>
+    <span class="signature">start(component, node_id, inports, outports, no_of_processes \\ 1)</span>
+      
+      <a href="https://github.com/pcmarks/ElixirFBP/blob/master/lib/elixirFBP/component.ex#L21" class="view-source" rel="help" title="View Source">
+       <i class="icon-code"></i>
+     </a>
+    
   </div>
   
   <section class="docstring">
@@ -90,18 +160,18 @@ pids that must be sent to any Subscriptions that a component’s in or out ports
 are connected to.</p>
 
   </section>
-  
-    <a href="https://github.com/pcmarks/ElixirFBP/blob/master/lib/elixirFBP/component.ex#L21" class="view_source">Source</a>
-  
-</section>
-<section class="detail">
-  <div class="detail_header" id="stop/3">
-    <span class="signature"><strong>stop(graph_reg_name, node_id, label)</strong></span>
-    <div class="detail_header_links">
-      <span class="detail_type">(function)</span>
-      <a href="#stop/3" class="detail_link" title="Link to this function">#</a>
-      <a class="to_top_link" href="#content" title="To the top of the page">&uarr;</a>
-    </div>
+</div>
+<div class="detail" id="stop/3">
+  <div class="detail-header">
+    <a href="#stop/3" class="detail-link" title="Link to this function">
+      <i class="icon-link"></i>
+    </a>
+    <span class="signature">stop(graph_reg_name, node_id, label)</span>
+      
+      <a href="https://github.com/pcmarks/ElixirFBP/blob/master/lib/elixirFBP/component.ex#L55" class="view-source" rel="help" title="View Source">
+       <i class="icon-code"></i>
+     </a>
+    
   </div>
   
   <section class="docstring">
@@ -109,10 +179,7 @@ are connected to.</p>
 unregister it and force an exit.</p>
 
   </section>
-  
-    <a href="https://github.com/pcmarks/ElixirFBP/blob/master/lib/elixirFBP/component.ex#L54" class="view_source">Source</a>
-  
-</section>
+</div>
 
         </section>
       
@@ -120,22 +187,22 @@ unregister it and force an exit.</p>
       
 
       
-    </section>
-
-    <!-- Scripts -->
-    <script>
-      relpath = '';
-      if (relpath != '') relpath += '/';
-    </script>
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="js/jquery.js"><\/script>')</script>
-    <script src="js/app.js"></script>
-    <script src="js/highlight.pack.js"></script>
-    <script>
-      hljs.initHighlightingOnLoad();
-      hljs.configure({languages: []}); //disable autodetect
-      if (window.top.frames.main) { document.body.className = 'frames'; }
-    </script>
+        <footer class="footer">
+      <p>
+        <span class="line">
+          Built using
+          <a href="https://github.com/elixir-lang/ex_doc" title="ExDoc" rel="help" target="_blank">ExDoc</a> (v0.10.1-dev),
+        </span>
+        <span class="line">
+          designed by
+          <a href="https://twitter.com/dignifiedquire" target="_blank" title="@dignifiedquire">Friedel Ziegelmayer</a>.
+          </span>
+      </p>
+    </footer>
+  </div>
+</section>
+</div>
+    <script src="dist/app.js"></script>
   </body>
 </html>
+
